[package]
name = "hyperliquid-rust-exec-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
ethers = "2.0.14"
hyperliquid_rust_sdk = "0.6.0"
rand = "0.8.5"
serde = "1.0.228"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
